--- a/templates/warehousing/admin/content/request.html
+++ b/templates/warehousing/admin/content/request.html
@@ -18,7 +18,7 @@
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
                         <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
-                        <li class="breadcrumb-item" id ="request_nav">Request /li>
+                        <li class="breadcrumb-item" id ="request_nav">Request </li>
                         <script>if(window.location.pathname == '/warehousing/admin/request/'){document.getElementById("request_nav").classList.add('active')}</script>
                     </ol>
                 </div>
@@ -95,7 +95,7 @@
     </section>
     <!-- /.content -->
 
-    <!-- Adding Request Modal -->
+    <!-- Adding Supply to the Request Modal -->
     <div class="modal fade" id="adding_modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
@@ -164,7 +164,7 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END Adding Request Modal -->
+    <!-- END Adding Supply to the Request Modal -->
 
     <!-- editing Request Modal -->
     <div class="modal fade" id="editing_modal">
@@ -218,7 +218,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="Submit" class="btn btn-primary" id="button_add">Add</button>
+                                <button type="Submit" class="btn btn-primary" id="button_save">Save</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
