--- a/templates/warehousing/admin/content/viewRequest.html
+++ b/templates/warehousing/admin/content/viewRequest.html
@@ -18,7 +18,8 @@
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
                         <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
-                        <li class="breadcrumb-item" id ="supplies_nav"><a href="/warehousing/admin/supplies">Supplies</a></li>                    </ol>
+                        <li class="breadcrumb-item" id ="supplies_nav"><a href="/warehousing/admin/request">Request</a></li>                    
+                    </ol>
                 </div>
                 <!-- / breadcrumb -->
             </div>
@@ -156,6 +157,69 @@
         </div><!-- /.modal -->
     </div>
     <!-- END Adding Supply Request Modal -->
+
+    <!-- editing Request Modal -->
+    <div class="modal fade" id="editing_modal">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Request Form</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- CONTENT -->
+                    <form id="e_form_id" name="e_form_id" enctype="multipart/form_data">
+                        <div class="card-body">
+                            <input type="hidden" name="e_uuid" id="e_uuid" value="" />
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_requestor">Requestor</label>
+                                        <select class="form-control" id="e_requestor" name="e_requestor">
+                                            <option value="Warehouse">Warehouse</option>
+                                            <option value="Procurement">Procurement</option>
+                                            <option value="Hospital Department">Hospital Department</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_request_type">Request type</label>
+                                        <select class="form-control" id="e_request_type" name="e_request_type">
+                                            <option value="For Request">For Request</option>
+                                            <option value="To Request">To Request</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_request_status" id="e_request_statusLabel">Request Status</label>
+                                        <select class="form-control" id="e_request_status" name="e_request_status">
+                                            <option value="Pending">Pending</option>
+                                            <option value="For Delivery">For Delivery</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="Submit" class="btn btn-primary" id="button_save">Save</button>
+                            </div>
+                            <!-- END BUTTONS -->
+                        </div>
+                    </form> <!-- END CONTENT -->
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END editing Request Modal -->
 {%endblock%}
 
 {%block scripts%}
