--- a/templates/warehousing/admin/default/base.html
+++ b/templates/warehousing/admin/default/base.html
@@ -430,6 +430,7 @@
 
 <!-- Additional JS -->
 <script src="{{url_for('static', path='/plugins/toastr/toastr.min.js')}}"></script>
+<script src="{{url_for('static', path='/plugins/moment/moment.min.js')}}"></script>
 <script src="{{url_for('static', path='/plugins/sweetalert2/sweetalert2.min.js')}}"></script>
 <script src="{{url_for('static', path='/dist/js/warehousing/access/logout.js')}}"></script>
 
